--- a/root/root.fsproj
+++ b/root/root.fsproj
@@ -7,12 +7,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FSharp.Formatting" Version="9.0.1" />
     <PackageReference Include="Giraffe" Version="5.0.0-rc-6" />
     <PackageReference Include="Giraffe.ViewEngine" Version="1.3.*" />
     <PackageReference Include="Ply" Version="0.3.*" />
   </ItemGroup>
 
+  <!-- order of files is important -->
   <ItemGroup>
+    <Compile Include="ViewModels.fs" />
+    <Compile Include="BlogArticle.fs" />
+
+    <Compile Include="Views.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
